@@ -15,7 +15,7 @@
 
 #include "tkInt.h"
 #include "tkMacOSXInt.h"
-#include "tclInt.h"
+#include "tclInt.h" /* for TclGetStartupScript() & TclSetStartupScript() */
 #include <sys/stat.h>
 #include <mach-o/dyld.h>
 #include <mach-o/getsect.h>
